--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Aesthetics By Simran Malra | Skin & Aesthetic Clinic</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
 :root{
@@ -58,7 +58,7 @@ nav a:hover{color:var(--primary);}
   display:grid;
   grid-template-columns:1fr 1fr;
   align-items:center;
-  gap:40px;
+  gap:50px;
 }
 .hero h2{
   font-family:'Playfair Display',serif;
@@ -84,10 +84,9 @@ nav a:hover{color:var(--primary);}
   font-weight:600;
 }
 
-/* NEW SERVICES AREA */
+/* NEW SERVICES */
 .new-services-area{
   margin-top:50px;
-  padding:30px 20px;
   max-width:520px;
 }
 
@@ -107,26 +106,26 @@ nav a:hover{color:var(--primary);}
   gap:14px 22px;
 }
 
-/* individual items */
 .service-chip{
-  font-size:15px;
+  background:white;
+  padding:10px 18px;
+  border-radius:999px;
+  font-size:14px;
   font-weight:600;
-  color:var(--dark);
-  opacity:0.85;
-  animation:pulse 2.2s infinite;
+  box-shadow:var(--shadow);
+  transition:transform .3s ease;
 }
 
-/* staggered blinking */
-.service-chip:nth-child(2){animation-delay:.4s;}
-.service-chip:nth-child(3){animation-delay:.8s;}
-.service-chip:nth-child(4){animation-delay:1.2s;}
-.service-chip:nth-child(5){animation-delay:1.6s;}
-.service-chip:nth-child(6){animation-delay:2s;}
+/* subtle rotations */
+.service-chip:nth-child(1){transform:rotate(-2deg);}
+.service-chip:nth-child(2){transform:rotate(1.5deg);}
+.service-chip:nth-child(3){transform:rotate(-1deg);}
+.service-chip:nth-child(4){transform:rotate(2deg);}
+.service-chip:nth-child(5){transform:rotate(-1.5deg);}
+.service-chip:nth-child(6){transform:rotate(1deg);}
 
-@keyframes pulse{
-  0%{opacity:1;}
-  50%{opacity:0.35;}
-  100%{opacity:1;}
+.service-chip:hover{
+  transform:rotate(0deg) scale(1.05);
 }
 
 /* IMAGE */
@@ -157,6 +156,7 @@ section h2{
   padding:30px;
   border-radius:18px;
   box-shadow:var(--shadow);
+  font-weight:500;
 }
 
 /* DISCLAIMER */
@@ -165,7 +165,7 @@ section h2{
   margin:60px auto 0;
   font-size:15px;
   color:var(--muted);
-  line-height:1.8;
+  line-height:1.9;
 }
 
 /* FOOTER */
@@ -179,8 +179,14 @@ footer a{color:var(--primary);}
 
 /* RESPONSIVE */
 @media(max-width:900px){
-  .hero{grid-template-columns:1fr;text-align:center;}
-  .new-services-area{margin-left:auto;margin-right:auto;}
+  .hero{
+    grid-template-columns:1fr;
+    text-align:center;
+  }
+  .new-services-area{
+    margin-left:auto;
+    margin-right:auto;
+  }
 }
 </style>
 </head>
@@ -205,23 +211,18 @@ footer a{color:var(--primary);}
 
     <a class="btn" href="contact.html">Book Appointment</a>
 
-.new-services-cloud .service-chip {
-  display: inline-block;
-  margin: 8px;
-  transition: transform 0.3s ease;
-}
-
-/* Slight, varied rotations */
-.new-services-cloud .service-chip:nth-child(1) { transform: rotate(-2deg); }
-.new-services-cloud .service-chip:nth-child(2) { transform: rotate(1.5deg); }
-.new-services-cloud .service-chip:nth-child(3) { transform: rotate(-1deg); }
-.new-services-cloud .service-chip:nth-child(4) { transform: rotate(2deg); }
-.new-services-cloud .service-chip:nth-child(5) { transform: rotate(-1.5deg); }
-.new-services-cloud .service-chip:nth-child(6) { transform: rotate(1deg); }
-
-.new-services-cloud .service-chip:hover {
-  transform: rotate(0deg) scale(1.05);
-}
+    <div class="new-services-area">
+      <div class="new-services-title">✨ New Services</div>
+      <div class="new-services-cloud">
+        <span class="service-chip">Q-Switch Laser</span>
+        <span class="service-chip">Tattoo Removal</span>
+        <span class="service-chip">Freckles</span>
+        <span class="service-chip">Uneven Tone</span>
+        <span class="service-chip">Carbon Laser</span>
+        <span class="service-chip">Open Pores</span>
+      </div>
+    </div>
+  </div>
 
   <div class="hero-image">
     <img src="https://raw.githubusercontent.com/Aesthetics-SimranMalra/images/main/simran_main.jpeg" alt="Simran Malra">
@@ -243,11 +244,11 @@ footer a{color:var(--primary);}
 <section class="disclaimer">
   <p>
     <strong>Because your face deserves a truly personalized approach.</strong><br><br>
-    No two individuals are alike—your skin, facial structure, concerns, lifestyle, and aesthetic goals are uniquely yours. 
-    That’s why every treatment we offer begins with a detailed, one-on-one professional consultation and expert assessment, ensuring each recommendation is tailored specifically to you.
+    No two individuals are alike—your skin, facial structure, concerns, lifestyle, and aesthetic goals are uniquely yours.
+    Every treatment begins with a detailed, one-on-one professional consultation and expert assessment to ensure it is right for you.
     <br><br>
-    Results and recovery timelines may naturally vary from person to person, but our commitment never changes. 
-    We prioritize safety, suitability, and precision at every step, delivering refined, natural-looking enhancements that respect your individuality and elevate your confidence.
+    Results and recovery timelines may vary, but our commitment remains constant—prioritizing safety, precision, and refined,
+    natural-looking enhancements that elevate your confidence while respecting your individuality.
   </p>
 </section>
 
