--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@ oninput="this.value=this.value.replace(/(?!^\\+)\\D/g,'')">
 </label>
 
 <label>Email Address
-<input type="email" id="email" placeholder="name@example.com">
+<input type="email" id="email" placeholder="yourname@gmail.com">
 </label>
 
 <p class="note">Please provide at least a phone number or email.</p>
