--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ footer a{color:var(--primary);}
     <div class="new-services-area">
       <div class="new-services-title">✨ New Services</div>
       <div class="new-services-cloud">
-        <a href="contact.html?service=Q-Switch%20Laser" class="service-chip">Q-Switch Laser</a>
+        <a class="service-chip">Q-Switch Laser Treatments</a>
         <a href="contact.html?service=Tattoo%20Removal" class="service-chip">Tattoo Removal</a>
         <a href="contact.html?service=Freckles" class="service-chip">Freckles</a>
         <a href="contact.html?service=Uneven%20Tone" class="service-chip">Uneven Tone</a>
